--- a/epub_generator/data/content.opf.jinja
+++ b/epub_generator/data/content.opf.jinja
@@ -3,29 +3,29 @@
   <metadata xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:opf="http://www.idpf.org/2007/opf">
     <dc:language>zh</dc:language>
     <dc:identifier id="uid">{{ ISBN }}</dc:identifier>
-{% if "title" in meta %}
-    <dc:title>{{ meta["title"] }}</dc:title>
+{% if meta and meta.title %}
+    <dc:title>{{ meta.title }}</dc:title>
 {% else %}
     <dc:title>{{ i18n.unnamed }}</dc:title>
 {% endif %}
-{% if "description" in meta %}
-    <dc:description>{{ meta["description"] }}</dc:description>
+{% if meta and meta.description %}
+    <dc:description>{{ meta.description }}</dc:description>
 {% endif %}
-{% if "publisher" in meta %}
-    <dc:publisher>{{ meta["publisher"] }}</dc:publisher>
+{% if meta and meta.publisher %}
+    <dc:publisher>{{ meta.publisher }}</dc:publisher>
 {% endif %}
-{% if "authors" in meta %}
-{% for author in meta["authors"] %}
+{% if meta and meta.authors %}
+{% for author in meta.authors %}
     <dc:creator opf:role="aut">{{ author }}</dc:creator>
 {% endfor %}
 {% endif %}
-{% if "editors" in meta %}
-{% for editor in meta["editors"] %}
+{% if meta and meta.editors %}
+{% for editor in meta.editors %}
     <dc:creator opf:role="edt">{{ editor }}</dc:creator>
 {% endfor %}
 {% endif %}
-{% if "translators" in meta %}
-{% for translator in meta["translators"] %}
+{% if meta and meta.translators %}
+{% for translator in meta.translators %}
     <dc:creator opf:role="trl">{{ translator }}</dc:creator>
 {% endfor %}
 {% endif %}
