--- a/epub_generator/data/part.xhtml.jinja
+++ b/epub_generator/data/part.xhtml.jinja
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title></title>
+  <title>Chapter</title>
   <link href="../styles/style.css" rel="stylesheet" type="text/css"/>
 </head>
 
@@ -13,7 +13,7 @@
   {{ item|safe }}
   {% endfor %}
   {% if citations %}
-  <section epub:type="footnotes" role="doc-footnotes">
+  <section epub:type="footnotes" role="doc-endnotes">
     <h2>{{ i18n.references }}</h2>
     {% for item in citations %}
     {{ item|safe }}
