--- a/epub_generator/data/part.xhtml.jinja
+++ b/epub_generator/data/part.xhtml.jinja
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="utf-8" standalone="no"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="zh" lang="zh">
 
 <head>
-  <title></title>
+  <meta charset="utf-8"/>
+  <title>Chapter</title>
   <link href="../styles/style.css" rel="stylesheet" type="text/css"/>
 </head>
 
@@ -12,10 +13,12 @@
   {{ item|safe }}
   {% endfor %}
   {% if citations %}
-  <h2>{{ i18n.references }}</h2>
-  {% for item in citations %}
-  {{ item|safe }}
-  {% endfor %}
+  <section epub:type="footnotes" role="doc-endnotes">
+    <h2>{{ i18n.references }}</h2>
+    {% for item in citations %}
+    {{ item|safe }}
+    {% endfor %}
+  </section>
   {% endif %}
 </body>
 
