--- a/epub_generator/data/style.css.jinja
+++ b/epub_generator/data/style.css.jinja
@@ -54,3 +54,15 @@ div.alt-wrapper th {
   background-color: #f6f8fa;
   font-weight: 600;
 }
+
+span.formula-inline {
+  display: inline;
+  vertical-align: middle;
+}
+
+span.formula-inline img {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 0.2em;
+  max-height: 1.2em;
+}
