refactor: migrate wrapper logic

--- a/epub_generator/data/style.css.jinja
+++ b/epub_generator/data/style.css.jinja
@@ -67,7 +67,7 @@ span.formula-inline img {
   max-height: 1.2em;
 }
 
-div.asset-container {
+div.asset {
   page-break-inside: avoid;
   margin: 1em 0;
 }
