feat: update & support title & caption of Asset (#16)

--- a/epub_generator/data/style.css.jinja
+++ b/epub_generator/data/style.css.jinja
@@ -66,3 +66,25 @@ span.formula-inline img {
   margin: 0 0.2em;
   max-height: 1.2em;
 }
+
+div.asset {
+  page-break-inside: avoid;
+  margin: 1em 0;
+}
+
+div.asset-title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 0.95em;
+  color: #333;
+  margin-bottom: 0.5em;
+  font-style: italic;
+}
+
+div.asset-caption {
+  text-align: center;
+  font-size: 0.9em;
+  color: #666;
+  margin-top: 0.5em;
+  font-style: italic;
+}
