refactor: convert to XML elements

--- a/epub_generator/data/nav.xhtml.jinja
+++ b/epub_generator/data/nav.xhtml.jinja
@@ -20,7 +20,7 @@
         <a href="Text/head.xhtml">{{ head_chapter_title }}</a>
       </li>
 {% endif %}
-{{ toc_list|safe }}
+{{ toc_body|safe }}
     </ol>
   </nav>
 
